<resources>
    <string name="app_name">MusicPlayerAppDemo</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favourites_btn">Favourites</string>
    <string name="playlist_btn">PlayLists</string>
    <string name="total_songs">Total Songs</string>
    <string name="world_of_music">World of music</string>
    <string name="song_name">Song name</string>
    <string name="start_tv">00:00</string>
    <string name="ent_tv">Loading...</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="text_welcome">Welcome to,\n World of music</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
</resources>